# Slownik_starszej_mowy

./: .Dockerignore  .env.example  .gitignore  Docker-compose.yml  Dockerfile  LICENSE  README.md  data.py  docker-compose.prod.yml  docker-compose.yml  ec2-setup.sh  import.py  ladowanie.py  load_data_to_database.sh  loading.py  main.py  mydb.py  plik.py  pyproject.toml  query.py  requirements.txt  slowniczek.txt  tests.py  zapytania.py
app/: Dockerfile  __init__.py  load_data_to_database.sh  main.py  requirements.txt
app/connection/: __init__.py  mydb.py  query.py
app/load_data/: __init__.py  __main__.py  create.py  data.txt  loading.py  plik.py
app/templates/: result.html
backend/: Dockerfile  entrypoint.sh  main.py
backend/connection/: mydb.py  query.py
backend/load_data/: __main__.py  create.py  loading.py
backend/templates/: unkown_word.html
dictonaries/: a.txt  b.txt  g.txt  j.txt  n.txt  o.txt  p.txt  u.txt  v.txt  ś.txt
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.jsx  index.css
slowniki/: A.txt  B.txt  C.txt  D.txt  E.txt  F.txt  G.txt  H.txt  I.txt  J.txt  K.txt  L.txt  M.txt  N.txt  O.txt  P.txt  Q.txt  R.txt  S.txt  T.txt  U.txt  V.txt  W.txt  X.txt  Y.txt  Z.txt  À.txt  Ò.txt  Ó.txt  Ù.txt  ł.txt  ż.txt
static/css/: form.css  results.css
templates/: form.html  result.html  unkown_word.html
tests/: test_app.py  test_tutajcos.py  tests.py
tests/tests_files/makefile/: D.txt  c.txt  o.txt  p.txt
tests_files/: test1.txt
tests_files/makefile/: A.txt  W.txt  c.txt  o.txt  p.txt  s.txt
